db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mirthconnect-db
    tier: backend
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-db
      type: mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: backend-db
        type: mysql
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql
          name: db
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-pv-claim
          resources: {}
      restartPolicy: Always
      volumes:
        - name: db-pv-claim
          persistentVolumeClaim:
            claimName: db-pv-claim
status: {}
