mc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirth-connect
  labels: 
    app: mirth-connect
    type: mc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirth-connect
      type: mirth-connect-app-web
  template:
    metadata:
      labels: 
        app: mirth-connect
        type: mirth-connect-app-web
    spec:
      containers:
        - env:
            - name: DATABASE
              value: mysql
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mirthconnect-mysql-creds
                  key: password
            - name: DATABASE_URL
              value: jdbc:mysql://db:3306/mirthdb
            - name: DATABASE_USERNAME
              value: root
          image: nextgenhealthcare/connect
          name: mc
          ports:
            - containerPort: 8080
            - containerPort: 8443
          resources: {}
          volumeMounts:
            - mountPath: /opt/connect/appdata
              name: mc-pv-claim
      restartPolicy: Always
      volumes:
        - name: mc-pv-claim
          persistentVolumeClaim:
            claimName: mc-pv-claim
status: {}
