db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: db-svc
    tier: backend-svc
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: backend-db
    type: mysql
status:
  loadBalancer: {}
