mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mirth-connect
  labels:
   app: mirth-connect
   type: mc-svc
  name: mc
spec:
  type: NodePort
  ports:
    - name: "8585"
      port: 8585
      targetPort: 8080
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    app: mirth-connect
    type: mirth-connect-app-web
status:
  loadBalancer: {}
